unpackaged/main/default/objects/GT_Wrike_Integration_Setting__c/GT_Wrike_Integration_Setting__c.object-meta.xml
<CustomObject>
    <description>ThisObject will be used to integrate with Wrike for Corporate Accounts. Please contact Catie Brosig or Rahul Sinha for more details on the usage of this metadata type</description>
    <label>Wrike Integration Setting</label>
    <nameField>
        <label>Event Record Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wrike Integration Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>