unpackaged/main/default/objects/GT_Wrike_Integration_Setting__c/fields/Authorization_Key__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Key__c</fullName>
    <defaultValue>&quot;Authorization&quot;</defaultValue>
    <description>Type Of Authorization to connect to Wrike</description>
    <inlineHelpText>Type Of Authorization to connect to Wrike</inlineHelpText>
    <label>Authorization Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>