unpackaged/main/default/objects/GT_Wrike_Integration_Setting__c/fields/Event_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_Record_Type_ID__c</fullName>
    <description>This field contains the recordtypeID of the Corp Event for a customer. Please be careful while entering this field.</description>
    <inlineHelpText>This field contains the recordtypeID of the Corp Event for a customer. Please be careful while entering this field.</inlineHelpText>
    <label>Event Record Type ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>