unpackaged/main/default/objects/GT_Wrike_Integration_Setting__c/fields/Folder_Map__c.field-meta.xml
<CustomField>
    <fullName>Folder_Map__c</fullName>
    <description>This field will keep the folder names mapped to their IDs. It will be a json string of an Object having a Map of List&lt;string, string&gt; and data would be in format =&gt;Folder_Name, WrikeID</description>
    <inlineHelpText>This field will keep the folder names mapped to their IDs. It will be a json string of an Object having a Map of List&lt;string, string&gt; and data would be in format =&gt;Folder_Name, WrikeID</inlineHelpText>
    <label>Folder Map</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>