unpackaged/main/default/objects/GT_Wrike_Integration_Setting__c/fields/Project_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Template_ID__c</fullName>
    <defaultValue>&quot;IEAB4P3RI4L266YF&quot;</defaultValue>
    <description>This field contains the ID of the project which is used as a template to create tasks.</description>
    <inlineHelpText>This field contains the ID of the project which is used as a template to create tasks.</inlineHelpText>
    <label>Project Template ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>