unpackaged/main/default/objects/GT_Wrike_Integration_Setting__c/fields/Wrike_Space_Id__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Space_Id__c</fullName>
    <description>Used to Store the ID of the space created uniquely for this record type/customer in Wrike</description>
    <inlineHelpText>Used to Store the ID of the space created uniquely for this record type/customer in Wrike</inlineHelpText>
    <label>Wrike Space Id</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>